--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,14 +1,12 @@
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
-    branches:
-      - master
+    branches: [master]
 
 name: Test push in master
 jobs:
-  format-code:
+  format-and-test:
     name: Lint files
     runs-on: ubuntu-latest
     steps:
