--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -1,5 +1,11 @@
 name: Test actions
-on: [push]
+
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
