--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -2,9 +2,11 @@ name: Test actions
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   Explore-GitHub-Actions:
