--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,20 +2,23 @@ name: Integration test environments
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   integration-tests:
     strategy:
       matrix:
-        node_version: ['10', '12']
+        node_version: ['10', '12', '14', '16']
         os: [ubuntu-latest, windows-latest, macOS-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out source code
         uses: actions/checkout@v3
+
       - name: Set up node
         uses: actions/setup-node@v3
         with:
@@ -29,7 +32,7 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.node_version }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
-      - run: yarn --frozen-lockfile
+        run: yarn --frozen-lockfile
 
       - name: Run unit tests
-      - run: yarn test --coverage
+        run: yarn test --coverage
