--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Integration test environments
+name: Integration tests
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
   integration-tests:
     strategy:
       matrix:
-        node_version: ['10', '12', '14', '16']
+        node_version: ['12', '14', '16']
         os: [ubuntu-latest, windows-latest, macOS-latest]
     runs-on: ${{ matrix.os }}
     steps:
