--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "release": "release-it",
     "bootstrap": "yarn example && yarn && yarn example pods",
     "test": "jest --passWithNoTests",
+    "test:coverage": "yarn test -- --coverage",
+    "test:badges": "yarn run test:coverage  && jest-coverage-badges",
     "np": "np --no-publish",
     "postversion": "react-native-version"
   },
@@ -57,6 +59,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
+    "@testing-library/react-native": "^11.0.0",
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.68.0",
@@ -67,6 +70,7 @@
     "eslint-plugin-jest": "^27.0.2",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.0.2",
+    "jest-coverage-badges": "^1.1.2",
     "np": "^7.6.2",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
@@ -74,6 +78,7 @@
     "react-native": "0.68.2",
     "react-native-builder-bob": "^0.18.3",
     "react-native-version": "^4.0.0",
+    "react-test-renderer": "17.0.2",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
