--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  coverage:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - name: Check out source code
@@ -23,3 +23,16 @@ jobs:
 
       - name: Run unit tests
         run: yarn test --coverage
+
+  coverage:
+    needs: [tests]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ArtiomTr/jest-coverage-report-action@v2
+        id: coverage
+        with:
+          output: report-markdown
+      - uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          message: ${{ steps.coverage.outputs.report }}
