--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  tests:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Check out source code
@@ -25,7 +25,8 @@ jobs:
         run: yarn test --coverage
 
   coverage:
-    needs: [tests]
+    if: ${{ always() }}
+    needs: unit-tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
