--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -24,16 +24,16 @@ jobs:
       - name: Run unit tests
         run: yarn test --coverage
 
-  coverage:
-    if: ${{ always() }}
-    needs: unit-tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ArtiomTr/jest-coverage-report-action@v2
-        id: coverage
-        with:
-          output: report-markdown
-      - uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          message: ${{ steps.coverage.outputs.report }}
+  # coverage:
+  #   if: ${{ always() }}
+  #   needs: unit-tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ArtiomTr/jest-coverage-report-action@v2
+  #       id: coverage
+  #       with:
+  #         output: report-markdown
+  #     - uses: marocchino/sticky-pull-request-comment@v2
+  #       with:
+  #         message: ${{ steps.coverage.outputs.report }}
