--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -1,4 +1,4 @@
-name: 'Unit tests & coverage'
+name: Unit tests
 
 on:
   push:
@@ -12,11 +12,13 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out source code
-      - uses: actions/checkout@v3
+      - name: Check out repo's default branch
+        uses: actions/checkout@v3
 
-      - name: Set up node
+      - name: Setup node
         uses: actions/setup-node@v3
+        with:
+          node-version: 16.13.x
 
       - name: Install dependencies
         run: yarn --frozen-lockfile --ignore-engines
