--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn --frozen-lockfile --ignore-engines
 
       - name: Run unit tests
-        run: yarn test --detectOpenHandles --coverage
+        run: yarn test
 
   # coverage:
   #   if: ${{ always() }}
