--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -24,18 +24,4 @@ jobs:
         run: yarn --frozen-lockfile --ignore-engines
 
       - name: Run unit tests
-        run: yarn test
-
-  # coverage:
-  #   if: ${{ always() }}
-  #   needs: unit-tests
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: ArtiomTr/jest-coverage-report-action@v2
-  #       id: coverage
-  #       with:
-  #         output: report-markdown
-  #     - uses: marocchino/sticky-pull-request-comment@v2
-  #       with:
-  #         message: ${{ steps.coverage.outputs.report }}
+        run: yarn test -- --ci --forceExit
