--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.2",
     "jest-coverage-badges": "^1.1.2",
+    "jest-transform-stub": "^2.0.0",
     "np": "^7.6.2",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
