fix: Placeholder & root atoms rm
1. Move atom to core dir
2. Check placeholder on rm & add
3. Fix placeholder styles
4. Add rm root atoms

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test:coverage": "yarn test --coverage",
     "test:badges": "yarn test:coverage  && jest-coverage-badges",
     "np": "np --no-publish",
-    "postversion": "react-native-version"
+    "postversion": "react-native-version",
+    "precommit": "yarn lint && yarn test"
   },
   "keywords": [
     "react-native",
