--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/eslint-parser": "^7.18.2",
     "@babel/preset-react": "^7.18.6",
     "@commitlint/config-conventional": "^17.1.0",
+    "@evilmartians/lefthook": "^1.1.1",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@testing-library/react-native": "^11.0.0",
