feat: mfDefault & blur mf
1. Separate mfDefault
2. refactor atoms style
3. Blur mf on click outside kb
4. Add space on math atom
5. Fix mobile kb styles

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test:badges": "yarn test:coverage  && jest-coverage-badges",
     "np": "np --no-publish",
     "postversion": "react-native-version",
-    "precommit": "yarn lint && yarn test"
+    "precommit": "yarn lint && yarn test -u"
   },
   "keywords": [
     "react-native",
