--- a/example/package.json
+++ b/example/package.json
@@ -11,20 +11,17 @@
     "start": "expo start"
   },
   "dependencies": {
-    "expo": "^45.0.0",
-    "expo-splash-screen": "~0.15.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.9.6",
-    "@types/react": "~17.0.21",
+    "@types/react": "^18.0.21",
     "babel-loader": "^8.2.5",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "~9.1.0",
-    "expo-cli": "^6.0.5"
+    "babel-preset-expo": "~9.1.0"
   }
 }
