--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint . --fix --ignore-path .eslintignore",
     "release": "release-it",
     "bootstrap": "yarn example && yarn && yarn example pods",
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests --config jest/config/jestConfig.js",
     "test:coverage": "yarn test --coverage",
     "test:badges": "yarn test:coverage  && jest-coverage-badges",
     "np": "np --no-publish",
@@ -62,9 +62,9 @@
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@testing-library/react-native": "^11.0.0",
-    "@types/jest": "^28.1.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "0.68.0",
+    "@types/jest": "^29.1.2",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.4",
     "commitlint": "^17.1.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
@@ -77,16 +77,13 @@
     "np": "^7.6.2",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-builder-bob": "^0.18.3",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
-  },
-  "resolutions": {
-    "@types/react": "17.0.21"
   },
   "peerDependencies": {
     "react": "*",
@@ -127,5 +124,16 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "expo": "^46.0.15",
+    "expo-app-loading": "^2.1.0",
+    "expo-asset": "~8.6.1",
+    "expo-cli": "^6.0.6",
+    "expo-font": "~10.2.0",
+    "expo-modules-core": "~0.11.5",
+    "expo-splash-screen": "~0.16.2",
+    "jest-expo": "^46.0.1",
+    "react-dom": "18.0.0"
   }
 }
