--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
+  "dependencies": {},
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
     "@babel/eslint-parser": "^7.18.2",
@@ -70,20 +71,27 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.2",
     "jest-coverage-badges": "^1.1.2",
     "jest-transform-stub": "^2.0.0",
     "np": "^7.6.2",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
+    "react": "^18.2.0",
+    "react-native": "^0.70.3",
     "react-native-builder-bob": "^0.18.3",
-    "react-native-version": "^4.0.0",
     "react-test-renderer": "^18.2.0",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "@expo/webpack-config": "^0.17.2",
+    "expo": "^46.0.15",
+    "expo-asset": "~8.6.1",
+    "expo-cli": "^6.0.6",
+    "expo-constants": "^13.2.4",
+    "expo-font": "~10.2.0",
+    "expo-modules-core": "~0.11.8",
+    "expo-splash-screen": "~0.16.2",
+    "jest-expo": "^46.0.1"
   },
   "peerDependencies": {
     "react": "*",
@@ -124,14 +132,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "expo": "^46.0.15",
-    "expo-asset": "~8.6.1",
-    "expo-cli": "^6.0.6",
-    "expo-font": "~10.2.0",
-    "expo-modules-core": "~0.11.5",
-    "expo-splash-screen": "~0.16.2",
-    "jest-expo": "^46.0.1"
   }
 }
