--- a/package.json
+++ b/package.json
@@ -53,7 +53,14 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "dependencies": {},
+  "dependencies": {
+    "expo": "^46.0.15",
+    "expo-cli": "^6.0.6",
+    "expo-font": "~10.2.0",
+    "expo-asset": "~8.6.1",
+    "expo-modules-core": "~0.11.8",
+    "expo-splash-screen": "~0.16.2"
+  },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
     "@babel/eslint-parser": "^7.18.2",
@@ -84,13 +91,6 @@
     "release-it": "^15.0.0",
     "typescript": "^4.5.2",
     "@expo/webpack-config": "^0.17.2",
-    "expo": "^46.0.15",
-    "expo-asset": "~8.6.1",
-    "expo-cli": "^6.0.6",
-    "expo-constants": "^13.2.4",
-    "expo-font": "~10.2.0",
-    "expo-modules-core": "~0.11.8",
-    "expo-splash-screen": "~0.16.2",
     "jest-expo": "^46.0.1"
   },
   "peerDependencies": {
